--- a/Styles/stylesBio.css
+++ b/Styles/stylesBio.css
@@ -1,3 +1,8 @@
+body{
+    height: 100%;
+    text-align: center;
+}
+
 .mainPanelBio{
     display: block;
     margin: 70px auto;
@@ -19,20 +24,10 @@ div#bioVerticalLine{
 #photoBio{
     width: 100%;
     border-radius: 50%;
-    display: block;
     margin: 0 auto;
 }
 
-.rotatingPhoto{
-    animation: rotation 2s infinite linear;
-}
-
-.staticPhoto{
-    animation: none;
-}
-
-
-#photoContainer{
+#photoContainer {
     width: 200px;
     border-radius: 50%;
     box-shadow: 3px 15px 18px #888888;
@@ -40,13 +35,8 @@ div#bioVerticalLine{
     display: block;
 }
 
-@keyframes rotation {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(359deg);
-    }
+.photoFadeIn{
+    animation: fadeInPhoto 0.5s ease-out;
 }
 
 .desaturatePhoto {
@@ -57,3 +47,105 @@ div#bioVerticalLine{
      -webkit-filter: grayscale(0%);
  }
 
+button {
+    border: 0;
+    position: relative;
+}
+
+button::before,
+button::after {
+    box-sizing: inherit;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.spin {
+    height: 220px;
+    width: 220px;
+}
+
+.spin::before,
+.spin::after {
+    top: 0;
+    left: 0;
+}
+
+.spin::before {
+    border: 4px solid transparent;
+}
+
+.spin:hover::before {
+    border-top-color: #0eb7da;
+    border-right-color: #0eb7da;
+    border-bottom-color: #0eb7da;
+    transition: border-top-color 0.15s linear, border-right-color 0.15s linear 0.10s, border-bottom-color 0.15s linear 0.20s;
+}
+
+.spin::after {
+    border: 0 solid transparent;
+}
+
+.spin:hover::after {
+    border-top: 4px solid #0eb7da;
+    border-left-width: 2px;
+    border-right-width: 2px;
+    transform: rotate(270deg);
+    transition: transform 0.4s linear 0s, border-left-width 0s linear 0.35s, -webkit-transform 0.4s linear 0s;
+}
+
+.spinning::after{
+    border-top: 4px solid #0eb7da;
+    border-left-width: 2px;
+    border-right-width: 2px;
+    transform: rotate(270deg);
+    transition: transform 0.6s linear 0s, border-left-width 0s linear 0.6s, -webkit-transform 0.6s linear 0s;
+}
+
+
+.spinning::before{
+    border-top-color: #0eb7da;
+    border-right-color: #0eb7da;
+    border-bottom-color: #0eb7da;
+    transition: border-top-color 0.15s linear, border-right-color 0.15s linear 0.10s, border-bottom-color 0.15s linear 0.20s;
+}
+
+
+.circle {
+    border-radius: 100%;
+    box-shadow: none;
+}
+
+.circle::before,
+.circle::after {
+    border-radius: 100%;
+}
+
+/**     ANIMATIONS      **/
+
+@keyframes fadeInPhoto {
+    0% {
+        display: block;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
