--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,8 +11,16 @@
 
 *{
   font-family:'robotothin';
-  background-color: white;
   user-select: none;
+    z-index: 1;
+    background-color: white;
+}
+
+html {
+    background-image: url("../Images/gridBackground.png");
+    background-repeat: repeat;
+    width: 100%;
+    height: 100%;
 }
 
 p#mainTitle{
@@ -27,12 +35,13 @@ p#secondTitle{
   font-size: 54px;
   display: block;
   margin: 100px auto;
+    margin-bottom: 150px;
   text-align: center;
   word-spacing: 8px;
 }
 
 div#verticalLine{
-    width: 1px;
+    width: 2px;
     background-color: black;
     height: 55px;
     display:inline-block;
@@ -41,7 +50,7 @@ div#verticalLine{
 }
 
 ul{
-  width: 100%;
+  width: 700px;
   font-size: 32px;
   margin: 0 auto;
   text-align: center;
