--- a/Styles/stylesBio.css
+++ b/Styles/stylesBio.css
@@ -36,7 +36,7 @@ div#bioVerticalLine{
 }
 
 .photoFadeIn{
-    animation: fadeInPhoto 0.5s ease-out;
+    animation: fadeInPhoto 0.8s ease-out;
 }
 
 .desaturatePhoto {
@@ -76,31 +76,17 @@ button::after {
     border: 4px solid transparent;
 }
 
-.spin:hover::before {
-    border-top-color: #0eb7da;
-    border-right-color: #0eb7da;
-    border-bottom-color: #0eb7da;
-    transition: border-top-color 0.15s linear, border-right-color 0.15s linear 0.10s, border-bottom-color 0.15s linear 0.20s;
-}
-
 .spin::after {
     border: 0 solid transparent;
 }
 
-.spin:hover::after {
-    border-top: 4px solid #0eb7da;
-    border-left-width: 2px;
-    border-right-width: 2px;
-    transform: rotate(270deg);
-    transition: transform 0.4s linear 0s, border-left-width 0s linear 0.35s, -webkit-transform 0.4s linear 0s;
-}
 
 .spinning::after{
     border-top: 4px solid #0eb7da;
     border-left-width: 2px;
     border-right-width: 2px;
     transform: rotate(270deg);
-    transition: transform 0.6s linear 0s, border-left-width 0s linear 0.6s, -webkit-transform 0.6s linear 0s;
+    transition: transform 0.6s linear 0s;
 }
 
 
@@ -108,7 +94,7 @@ button::after {
     border-top-color: #0eb7da;
     border-right-color: #0eb7da;
     border-bottom-color: #0eb7da;
-    transition: border-top-color 0.15s linear, border-right-color 0.15s linear 0.10s, border-bottom-color 0.15s linear 0.20s;
+    transition: border-top-color 0.8s linear, border-right-color 0.8s linear 0.10s, border-bottom-color 0.15s linear 0.20s;
 }
 
 
