--- a/Styles/stylesTimeline.css
+++ b/Styles/stylesTimeline.css
@@ -59,21 +59,28 @@ span.returnTextHover{
     box-sizing: border-box;
 }
 
-/* Set a background color */
+h2{
+    background-image: none;
+}
+
 body {
-    background-color: #474e5d;
-    font-family: Helvetica, sans-serif;
+    font-family: 'robotothin';
     background-image: url("../Images/gridBackground.png");
 }
 
-/* The actual timeline (the vertical ruler) */
+p{
+    letter-spacing: 2px;
+    font-size: 1.25em;
+    font-weight: bold;
+    background-image: none;
+}
+
 .timeline {
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-/* The actual timeline (the vertical ruler) */
 .timeline::after {
     content: '';
     position: absolute;
@@ -85,23 +92,22 @@ body {
     margin-left: -3px;
 }
 
-/* Container around content */
 .container {
     padding: 50px 40px;
     position: relative;
     background-color: inherit;
     width: 50%;
+    background-image: none;
 }
 
-/* The circles on the timeline */
 .container::after {
     content: '';
     position: absolute;
     width: 20px;
     height: 20px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
+    right: -14px;
+    background-color: #0eb7da;
+    border: 4px solid #0eb7da;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -115,7 +121,6 @@ body {
     left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
 .left::before {
     content: " ";
     height: 0;
@@ -129,7 +134,6 @@ body {
     border-color: transparent transparent transparent black;
 }
 
-/* Add arrows to the right container (pointing left) */
 .right::before {
     content: " ";
     height: 0;
@@ -143,36 +147,30 @@ body {
     border-color: transparent black transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
 .right::after {
-    left: -16px;
+    left: -14px;
 }
 
-/* The actual content */
 .content {
     padding: 20px 30px;
     background-color: white;
     position: relative;
     border-radius: 6px;
+    background-image: none;
 }
 
 
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
     .timeline::after {
         left: 31px;
     }
 
-    /* Full-width containers */
     .container {
         width: 100%;
         padding-left: 70px;
         padding-right: 25px;
     }
 
-    /* Make sure that all arrows are pointing leftwards */
     .container::before {
         left: 60px;
         border: medium solid white;
@@ -180,12 +178,10 @@ body {
         border-color: transparent white transparent transparent;
     }
 
-    /* Make sure all circles are at the same spot */
     .left::after, .right::after {
         left: 15px;
     }
 
-    /* Make all right containers behave like the left ones */
     .right {
         left: 0%;
     }
