--- a/Styles/stylesBio.css
+++ b/Styles/stylesBio.css
@@ -10,6 +10,20 @@ body{
     text-align: center;
     font-size:1.25em;
     line-height: 1.75em;
+    background-color: white;
+    background-image: none;
+    padding: 20px;
+}
+
+
+@media screen and (max-width: 700px) {
+.mainPanelBio{
+    width: 60%;
+}
+}
+
+p,h3{
+    background-image: none;
 }
 
 div#bioVerticalLine{
