--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -24,20 +24,24 @@ html {
 }
 
 p#mainTitle{
-  font-size: 4em;
+  font-size: 3.5em;
   display: none;
   margin: 100px auto;
   text-align: center;
+    background-color: transparent;
+    background-image: none;
 }
 
 p#secondTitle{
   width: 500px;
-  font-size: 54px;
+  font-size: 3.5em;
   display: block;
   margin: 100px auto;
     margin-bottom: 150px;
   text-align: center;
   word-spacing: 8px;
+    background-color: transparent;
+    background-image: none;
 }
 
 div#verticalLine{
@@ -65,7 +69,7 @@ a{
 }
 
 li{
-  width: 700px;
+    width: 600px;
   margin: 70px auto;
   display: block;
   text-align: center;
@@ -78,6 +82,26 @@ li{
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   transition: all 1s;
+}
+
+@media screen and (max-width: 700px) {
+    p#mainTitle{
+        font-size: 2.5em;
+    }
+
+    p#secondTitle{
+        font-size: 2.5em;
+        width: 400px;
+    }
+
+    ul{
+        width: 400px;
+    }
+
+    li{
+        width: 300px;
+        font-size: 1em;
+    }
 }
 
 
