--- a/Styles/stylesContact.css
+++ b/Styles/stylesContact.css
@@ -56,7 +56,7 @@ img.linkImage{
 }
 
 li{
-  width: 700px;
+  width: 600px;
   margin: 40px auto;
   display: block;
   text-align: center;
@@ -69,6 +69,26 @@ li{
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   transition: all 1s;
+}
+
+@media screen and (max-width: 700px) {
+  p#mainTitle{
+    font-size: 2.5em;
+  }
+
+  p#secondTitle{
+    font-size: 2.5em;
+    width: 400px;
+  }
+
+  ul{
+    width: 400px;
+  }
+
+  li{
+    width: 300px;
+    font-size: 0.8em;
+  }
 }
 
 li#githubPanel:hover{
