--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -19,8 +19,12 @@
 html {
     background-image: url("../Images/gridBackground.png");
     background-repeat: repeat;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    min-height: 100%;
+}
+
+body{
+    padding-bottom: 70px;
 }
 
 p#mainTitle{
@@ -140,3 +144,19 @@ li.linkWithFullBorder:before, li.linkWithFullBorder:after, li.linkWithHoverBorde
     height: 100%;
 }
 
+footer{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    height: 70px;
+    background-image: none;
+    background-color: transparent;
+}
+
+footer p{
+    font-size: 16px;
+    background-image: none;
+    background-color: transparent;
+    font-weight: normal;
+}
