--- a/Styles/stylesTimeline.css
+++ b/Styles/stylesTimeline.css
@@ -66,12 +66,16 @@ h2{
 body {
     font-family: 'robotothin';
     background-image: url("../Images/gridBackground.png");
+    padding-bottom: 70px;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
 }
 
 p{
     letter-spacing: 2px;
-    font-size: 1.25em;
     font-weight: bold;
+    font-size: 1.25em;
     background-image: none;
 }
 
@@ -79,6 +83,7 @@ p{
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 70px;
 }
 
 .timeline::after {
